Updates from Overleaf

--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Discussion and Conclusion}\label{sec:conclusion}
 
-We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). \mr{Our power spectrum model takes into account various theoretical and observational effects such as RSD, magnification bias, survey geometry, and integral constraint. Most importantly, we utilize novel machine learning-method to mitigate the effect of imaging systematics and reduce excess clustering power at low $\ell$.} In our fiducial analysis, we have obtained a maximum likelihood value of \mr{$\fnl=46$} with a significant probability that $\fnl$ is greater than zero, $P(\fnl>0)=99.9$ (Figure \ref{fig:mcmc_dr9} and Table \ref{tab:dr9methodcalib}). \mr{Even without accounting for over-correction, we find significant deviation from zero PNG at $P(\fnl>0)=99.4$.  While we have not measured the mitigation over-correction for the linear cases, it would only make the result more significantly non-zero and we cannot envision this changing any of our conclusions.}
+We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). \mr{Our power spectrum model accounts for various theoretical and observational effects such as RSD, magnification bias, survey geometry, and integral constraint. Most importantly, we utilize novel a machine learning-method to mitigate the effect of imaging systematics and reduce excess clustering power at low $\ell$.} In our fiducial analysis, we have obtained a maximum likelihood value of \mr{$\fnl=46$} with a significant probability that $\fnl$ is greater than zero, $P(\fnl>0)=99.9$ (Figure \ref{fig:mcmc_dr9} and Table \ref{tab:dr9methodcalib}). \mr{Our findings are robust against parameters $p$ and $s$. Even without accounting for over-correction, we find significant deviation from zero PNG at $P(\fnl>0)=99.4$.  While we have not measured the mitigation over-correction for the linear cases, it would only make the result more significantly non-zero and we cannot envision this changing any of our conclusions.}
 
 The signature of local PNG is very sensitive to excess clustering signals caused by imaging systematic effects. We have applied a series of robustness tests to investigate the impact of how the galaxy selection function is determined. Specifically, both linear and nonlinear methods are applied using various combinations of imaging systematic maps (Galactic extinction, stellar density, depth in $grzW1$, psfsize in $grz$, and neutral hydrogen column density). We also examine the effect of different masks based on imaging. Overall, we find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly lower value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}). The only manner in which the significance of nonzero PNG decreases is due to the uncertainty on the measurement increasing when we employ more imaging systematic maps for the selection function estimation and by doing so remove large-scale clustering information (the effect of which on $\fnl$ recovery we have calibrated with mocks, as shown in Figure \ref{fig:fnlbias}).
 
