--- a/sections/results.tex
+++ b/sections/results.tex
@@ -19,11 +19,11 @@ The differences between various cleaning methods are significant on large scales
 
 
 \subsubsection{Calibrated constraints}
-All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using the \textit{non-linear four maps} method which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is greater than zero, $P(\fnl >0)=99.9$ per cent. We also apply a more aggressive systematics treatment that includes regression using the nonlinear approach against the full set of imaging maps we identified, nonlinear nine maps, and find that \mr{zero $\fnl$ is recovered, as regressing against more maps has diminished the constraining power of the dataset. Specifically,} our maximum
+All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using the \textit{non-linear four maps} method which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is greater than zero, $P(\fnl >0)=99.9$ per cent. \mr{We also explore the sensitivity of the $\fnl$ posterior for the nonlinear three maps method while varying the value of $p$ in the range of $0.55$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Our findings are illustrated in Figure \ref{fig:fnl_magbias} and summarized in Table \ref{tab:dr9ps}. We find that the precise value of $s$ has a negligible impact on the characteristics of the $\fnl$ posterior distribution (as shown in the bottom panel, Figure \ref{fig:fnl_magbias}). However, the parameter $p$ exhibits a more substantial influence on $\fnl$, such that the best-fitting estimate of $\fnl$ and the associated uncertainty both increase as a function of $p$ and the significance of $\fnl>0$ varies from $3.8\sigma$ to $2.6\sigma$ (as shown in the top panel, Figure \ref{fig:fnl_magbias}).}
+
+We also apply a more aggressive systematics treatment that includes regression using the nonlinear approach against the full set of imaging maps we identified, nonlinear nine maps, and find that \mr{zero $\fnl$ is recovered, as regressing against more maps has diminished the constraining power of the dataset. Specifically,} our maximum
 likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.5$}, \mout{but} \mr{and} the uncertainty on $\fnl$ increases \mr{by more than a factor of two, $-10(-39)<\fnl<58 (84)$,} due
 to the aggressive treatment removing large-scale clustering information. For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
-
-\mr{Our analysis is simplified by fixing the values of $p$ and $s$ to their pre-determined and estimated values. We also explore the sensitivity of the $\fnl$ posterior for the nonlinear three maps method to various values of $p$, ranging between $0.55$ and $1.6$, and $s$ from $0.75$ to $1.25$. Overall, as illustrated in Figure \ref{fig:fnl_magbias} and summarized in Table \ref{tab:dr9ps}, we find that the $\fnl$ posterior to be quite insensitive to the value of $s$, and both the best fitting estimate of $\fnl$ and the error increase as a function of $p$; however the overall impact on the signal to noise and $P(\fnl > 0)$ is shown to be insignificant.}
 
 \begin{table*}
     \caption{\mr{``Without mag bias for referee review only.''} The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for imaging systematic effects. The lowest mode is $\ell_{\rm min}=2$.}
@@ -78,7 +78,7 @@ DESI                      & Nonlinear Nine Maps& $    34$& $    24$& $   -10<\fn
 \raggedleft
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{Best fitting estimates and $68\%$ ($95\%$) error on $\fnl$ from the DESI DR9 LRG sample with the non-linear three maps cleaning approach. The fiducial values are marked by stars. The constraints are stable against different values of $s$, but show noticeable sensitivity to $p$. As the value of $p$ increases the local PNG term decreases and thus the constraints get relaxed.}}\label{fig:fnl_magbias}
+\caption{\mr{Best fitting estimates and $68\%$ ($95\%$) error on $\fnl$ from the DESI DR9 LRG sample with the non-linear three maps cleaning approach. The fiducial values are marked by stars. The constraints are stable against different values of $s$, but exhibit visible sensitivity to $p$.}}\label{fig:fnl_magbias}
 \end{figure}
 
 \begin{table*}
@@ -115,7 +115,7 @@ $s=$ 0.75                                    & $    46$& $    49$& $    35<\fnl<
 \end{table*}
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The differences observed in the best fitting estimates can be associated to over-correction, similar to the effect observed in the mocks (see Figure \ref{fig:contmcmc}). Therefore, the uncalibrated values should be considered with caution. Without accounting for over-correction, while the non-linear four maps and non-linear nine maps recover zero $\fnl$ respectively within $95\%$ and $68\%$ confidence, the dataset with the non-linear three maps cleaning reveals that the probability of $\fnl$ being greater than zero is $99.5\%$.}
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mr{While reporting the uncalibrated constraints, we therefore include the label 'Mitigation Systematics' to emphasize that the $\fnl$ values will be biased by an unknown shift}. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The differences observed in the best fitting estimates can be associated to over-correction, similar to the effect observed in the mocks (see Figure \ref{fig:contmcmc}). Therefore, the uncalibrated values should be considered with caution. Without accounting for over-correction, while the non-linear four maps and non-linear nine maps recover zero $\fnl$ respectively within $95\%$ and $68\%$ confidence, the dataset with the non-linear three maps cleaning reveals that the probability of $\fnl$ being greater than zero is $99.5\%$.}
 
 Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied to the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant, as we are only interested in the relative shift in the $\fnl$ constraints after changing the assumptions. Therefore, the absolute scaling of the $\fnl$ constraints presented here are biased because of the over-correction effect. Table \ref{tab:dr9method} summarizes the uncalibrated $\fnl$ constraints from the DESI LRG targets. Our tests are as follows:
 
@@ -129,7 +129,7 @@ Now we proceed to perform some robustness tests and assess how sensitive the $\f
 
 \item \textbf{Pixel completeness (\textit{comp. cut})}: We discard pixels with fractional completeness less than half to assess the effect of partially complete pixels on $\fnl$. This pixel completeness cut removes $0.6\%$ of the survey area, and no changes in the $\fnl$ constraints are observed.
 
-\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Although these cuts remove $8\%$ of the survey mask, there is a negligible impact on the best-fitting $\fnl$ from fitting the DESI power spectrum. However, when each region \mr{power spectrum} is fit individually, the BASS+MzLS constraint shift toward higher values of $\fnl$ by approximately $\Delta \fnl \sim 10$, \mr{the DECaLS South posterior becomes highly asymmetric,} whereas \mout{the constraints from} \mr{the DECaLS North posterior} \mout{and DECaLS South} do\mr{es} not change significantly. 
+\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Although these cuts remove $8\%$ of the survey mask, there is a negligible impact on the best-fitting $\fnl$ from fitting the DESI power spectrum. However, when each region \mr{power spectrum} is fit individually, the BASS+MzLS constraint shift toward higher values of $\fnl$ by approximately $\Delta \fnl \sim 10$, \mr{the DECaLS South posterior becomes asymmetric with a long tail toward negative $\fnl$ values,} whereas \mout{the constraints from} \mr{the DECaLS North posterior} \mout{and DECaLS South} do\mr{es} not change significantly. 
 
 \item \textbf{Covariance matrix (\textit{cov})}: We fit the power spectrum of our sample cleaned with \textit{non-linear three maps} correction, but use the covariance matrix constructed from the $\fnl=76.9$ mocks. With the alternative covariance, a \mr{$13\%$} increase in the $\sigma(\fnl)$ is observed. We also find that the best-fitting and marginalized mean estimates of $\fnl$ increase by \mr{$\Delta \fnl = 3$}. Overall, we find that the differences are not significant in comparison to the statistical precision.
 
