Updates from Overleaf

--- a/sections/results.tex
+++ b/sections/results.tex
@@ -78,7 +78,7 @@ DESI                      & Nonlinear Nine Maps& $    34$& $    24$& $   -10<\fn
 \raggedleft
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{Best fitting estimates and $68\%$ ($95\%$) error on $\fnl$ from the DESI DR9 LRG sample with the non-linear three maps cleaning approach. The fiducial values are marked by stars. The constraints are stable against different values of $s$, but exhibit visible sensitivity to $p$.}}\label{fig:fnl_magbias}
+\caption{\mr{Best fitting estimates of $\fnl$ and associated $68\%$ ($95\%$) error from the DESI LRG targets with the non-linear three maps cleaning approach while using different values of $p$ or $s$. The fiducial case ($p=1$ and $s=0.945$) is represented by star. The constraints are stable against different values of $s$, but exhibit visible sensitivity to $p$.}}\label{fig:fnl_magbias}
 \end{figure}
 
 \begin{table*}
