--- a/sections/results.tex
+++ b/sections/results.tex
@@ -115,13 +115,13 @@ $s=$ 0.75                                    & $    46$& $    49$& $    35<\fnl<
 \end{table*}
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mr{While reporting the uncalibrated constraints, we therefore include the label 'Mitigation Systematics' to emphasize that the $\fnl$ values will be biased by an unknown shift}. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The differences observed in the best fitting estimates can be associated to over-correction, similar to the effect observed in the mocks (see Figure \ref{fig:contmcmc}). Therefore, the uncalibrated values should be considered with caution. Without accounting for over-correction, while the non-linear four maps and non-linear nine maps recover zero $\fnl$ respectively within $95\%$ and $68\%$ confidence, the dataset with the non-linear three maps cleaning reveals that the probability of $\fnl$ being greater than zero is $99.5\%$.}
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mr{While reporting the uncalibrated constraints, we therefore include the label 'Mitigation Systematics' to emphasize that the $\fnl$ values will be biased by an unknown shift}. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. Our non-linear three maps returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The differences observed in the best fitting estimates can be associated to over-correction, similar to the effect observed in the mocks (see Figure \ref{fig:contmcmc}). Therefore, the uncalibrated values should be considered with caution. Without accounting for over-correction, while the non-linear four maps and non-linear nine maps recover zero $\fnl$ respectively within $95\%$ and $68\%$ confidence, the dataset with the non-linear three maps cleaning reveals that the probability of $\fnl$ being greater than zero is $99.5$ per cent.}
 
 Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied to the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant, as we are only interested in the relative shift in the $\fnl$ constraints after changing the assumptions. Therefore, the absolute scaling of the $\fnl$ constraints presented here are biased because of the over-correction effect. Table \ref{tab:dr9method} summarizes the uncalibrated $\fnl$ constraints from the DESI LRG targets. Our tests are as follows:
 
 \begin{itemize}[itemindent=*]
 
-\item \textbf{Linear methods}: Even though the linear three maps approach shows significant remaining systematics (Figure \ref{fig:chi2test} and Table \ref{tab:chi2test}), we obtain identical constraints from \textit{linear eight maps} and \textit{linear three maps}, respectively, \mr{$24(14)<\fnl<49(63)$ and $25(14)<\fnl<50(64)$} at $68\%(95\%)$ confidence. \mr{For the linear treatment methods, the probability of $\fnl$ being greater than zero is remarkably high at $99.9$ per cent. Any attempt to account for the over-correction would elevate this probability. This overestimation of $\fnl$ in the data when using the linear methods can be attributed to an increase in systematic contamination.}
+\item \textbf{Linear methods}: Even though the linear three maps approach shows significant remaining systematics (Figure \ref{fig:chi2test} and Table \ref{tab:chi2test}), we obtain identical constraints from \textit{linear eight maps} and \textit{linear three maps}, respectively, \mr{$24(14)<\fnl<49(63)$ and $25(14)<\fnl<50(64)$} at $68\%(95\%)$ confidence. \mr{For the linear treatment methods, the probability of $\fnl$ being greater than zero is high at $99.9$ per cent. Any attempt to account for the over-correction would elevate this probability further. This overestimation of $\fnl$ in the data can be attributed to an increase in systematic contamination.}
 
 \item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear three maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$. Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. \mout{Ignoring the over-correction effect, we find that the results from the DECaLS North region to be the only one that finds PNG nonzero at greater than 95\%, which motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.}
 
