--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Discussion and Conclusion}\label{sec:conclusion}
 
-We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). \mr{Our power spectrum model accounts for various theoretical and observational effects such as RSD, magnification bias, survey geometry, and integral constraint. Most importantly, we utilize a novel machine learning-method to mitigate the effect of imaging systematics and reduce excess clustering power at low $\ell$.} In our fiducial analysis, we have obtained a maximum likelihood value of \mr{$\fnl=46$} with a significant probability that $\fnl$ is greater than zero, $P(\fnl>0)=99.9$ (Figure \ref{fig:mcmc_dr9} and Table \ref{tab:dr9methodcalib}). \mr{Our findings are robust against parameters $p$ and $s$. Even without accounting for over-correction, we find significant deviation from zero PNG at $P(\fnl>0)=99.4$.  While we have not measured the mitigation over-correction for the linear cases, it would only make the result more significantly non-zero and we cannot envision this changing any of our conclusions.}
+We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). \mr{Our power spectrum model accounts for various theoretical and observational effects such as RSD, magnification bias, survey geometry, and integral constraint. Most importantly, we utilize a novel machine learning-method to mitigate the effect of imaging systematics and reduce excess clustering power at low $\ell$.} In our fiducial analysis, we have obtained a maximum likelihood value of \mr{$\fnl=46$} with a significant probability that $\fnl$ is greater than zero, $P(\fnl>0)=99.9$ (Figure \ref{fig:mcmc_dr9} and Table \ref{tab:dr9methodcalib}).
 
 The signature of local PNG is very sensitive to excess clustering signals caused by imaging systematic effects. We have applied a series of robustness tests to investigate the impact of how the galaxy selection function is determined. Specifically, both linear and nonlinear methods are applied using various combinations of imaging systematic maps (Galactic extinction, stellar density, depth in $grzW1$, psfsize in $grz$, and neutral hydrogen column density). We also examine the effect of different masks based on imaging. Overall, we find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly lower value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}). The only manner in which the significance of nonzero PNG decreases is due to the uncertainty on the measurement increasing when we employ more imaging systematic maps for the selection function estimation and by doing so remove large-scale clustering information (the effect of which on $\fnl$ recovery we have calibrated with mocks, as shown in Figure \ref{fig:fnlbias}). \mr{For instance, we obtain $\fnl = 34^{+24(+50)}_{-44(-73)}$ using the nonlinear nine maps.}
 
@@ -11,6 +11,6 @@ The signature of local PNG is very sensitive to excess clustering signals caused
     \label{fig:fnlhist}
 \end{figure}
 
-When comparing our fiducial results to recent CMB and QSO measurements, as shown in Figure \ref{fig:fnlhist}, we find a significant tension with CMB\mr{, e.g., more than $3 \sigma$ at $p=1$ (see Figure \ref{fig:fnl_magbias},} but consistent constraints with LSS within $95\%$ confidence. \mr{We emphasize that the tension between our non-linear three maps constraint and CMB is persistent even without accounting for over-correction; $P(\fnl>0)$ decreases from 99.9 to 99.4 per cent or more than $2\sigma$. The uncalibrated constraints from the non-linear four and non-linear nine maps methods are consistent with CMB, but these methods are highly prone to over-fitting and their applications to the LRG sample are not justified based on our remaining systematic $\chi^{2}$ diagnostics.} Therefore, either we have measured an $\fnl$ signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data which cannot be mitigated with available imaging systematic maps. \mr{There is a body of exciting work in the literature exploring models where $\fnl$ (or another non-Gaussianity parameter) varies with scales and evades the CMB constraint while showing up in the LSS \citep{2008JCAP...04..014L,sefusatti_2009, becker_2011, Becker_2012}. On the other hand, a major limitation of template-based mitigation techniques, like the methods employed in this study, is that the data cannot be corrected for unknown systematic effects, which we do not have a template for. In this regard, multi-tracer techniques can be considered as robust alternatives since they are less sensitive to systematics. Cross-correlations of DESI LRG targets with CMB lensing could shed more light on the issues discussed in this paper. Additionally, forward modeling techniques for estimating the galaxy survey selection function can provide a new path to handle unknown systematics \citep{suchyta2016, kong2020}.}
+When comparing our fiducial results to recent CMB and QSO measurements, as shown in Figure \ref{fig:fnlhist}, we find a significant tension with CMB\mr{, e.g., more than $3 \sigma$ at $p=1$ (see Figure \ref{fig:fnl_magbias}),} but consistent constraints with LSS within $95\%$ confidence. \mr{Our findings are robust against parameters $p$ and $s$. The tension between our non-linear three maps constraint and CMB is significant even without accounting for over-correction with $P(\fnl>0)=99.5$ per cent. The linear methods also yield constraints that are in tension with CMB ($P(\fnl>0)=99.9$), and while we have not calibrated the over-correction for the linear cases, it would only make the result more significantly non-zero and we cannot envision this changing any of our conclusions. The only approaches that return constraints consistent with CMB are the ones that diminish the constraining power of the dataset, such as the non-linear nine maps. Our residual systematic tests indicate that we do not need more than the three maps to explain the spurious fluctuations in the dataset against all nine maps, so there is no justification for including all available maps to treat imaging systematics.} Therefore, either we have measured an $\fnl$ signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data which cannot be mitigated with available imaging systematic maps. \mr{There is a body of exciting work in the literature exploring models where $\fnl$ (or another non-Gaussianity parameter) varies with scales and evades the CMB constraint while showing up in the LSS \citep{2008JCAP...04..014L,sefusatti_2009, becker_2011, Becker_2012}. On the other hand, a major limitation of template-based mitigation techniques, like the methods employed in this study, is that the data cannot be corrected for unknown systematic effects, which we do not have a template for. In this regard, multi-tracer techniques can be considered as robust alternatives since they are less sensitive to systematics. Cross-correlations of DESI LRG targets with CMB lensing could shed more light on the issues discussed in this paper. Additionally, forward modeling techniques for estimating the galaxy survey selection function can provide a new path to handle unknown systematics \citep{suchyta2016, kong2020}.}
 
 Our analysis can be considered as the first attempt to identify major systematics in DESI, so we can be ready for constraining $\fnl$ with DESI spectroscopy. Internal DESI tests of the photometric calibration were unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such a mis-calibration would plausibly be proportional in amplitude to the estimated E(B-V) map, though it may not have E(B-V)’s spatial distribution. In order to explain the $\fnl$ signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help establish if this is indeed the cause.
